# TaskManagementSystem-FastAPI

./: .env  alembic.ini  pyproject.toml
Backend/: Dockerfile  alembic.ini  celerybeat-schedule.db  docker-compose.yml  pyproject.toml  test.py
Backend/app/: main.py
Backend/app/core/: celery.py  config.py  middleware.py  oauth.py
Backend/app/crud/: company.py  project.py  task.py
Backend/app/database/: db.py
Backend/app/dependencies/: auth.py  company.py  filters.py  pagination.py  task.py
Backend/app/events/: task.py
Backend/app/routers/: auth.py  projects.py  task.py
Backend/app/schemas/: company.py  pagination.py  profile.py  project.py  rebuild.py  task.py  user.py
Backend/app/services/: task.py  user.py
Backend/migrations/versions/: 1086b7230ae0_datetime_type_in_endon_for_project_model.py  12f5f4adafcc_added_the_subtask_and_blocked_task_.py  196756c97c51_added_the_subtask_and_blocked_task_.py  27ba9c22ebbb_added_oauthid_in_user_model.py  28f92d899655_datetime_type_in_endon_for_project_model.py  32b7ebf769c3_added_extra_enum_in_the_task_status.py  52e00db337bc_default_value_for_updated_at_inside_the_.py  6182a66a6d7a_unique_subtask_name_removed.py  7362f21c97aa_initial.py  91e412e8fbfe_added_the_subtask_and_blocked_task_.py  9f2a5effdce3_manage_the_cascade_delete_on_assoc_table.py  a18ff85b857e_tableargs_typo_fix.py  b49cd10f9270_added_the_subtask_and_blocked_task_.py  b710aeaaf4a1_added_the_subtask_and_blocked_task_.py  bdd7bee68d1a_rearranged.py  bfb006db8331_default_value_for_updated_at_inside_the_.py  (+6 more)
Backend/scripts/: celery_reload.py
(+80 files in other folders)
