[project]
name = "taskmanagementsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "authlib>=1.7.2",
    "celery[redis]>=5.6.3",
    "cloudinary>=1.44.2",
    "fastapi[standard]>=0.137.0",
    "itsdangerous>=2.2.0",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.50",
]
